<package>
  <name>steven</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for steven</p>
    <p>This package contains configuration data, 3D models and launch files
for steven robot</p>
  </description>
  <author>Gonzalo Pinell</author>
  <maintainer email="gonzalopinell@gmail.com" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>gazebo</run_depend>
  <export>
    <architecture_independent />
  </export>
</package>
